# c-libs

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  templates.h
matrix/: Makefile  matrix.c
